--- a/.monaca/project_info.json
+++ b/.monaca/project_info.json
@@ -9,7 +9,9 @@
     "plugin_settings": [],
     "external_plugins": [
         "cordova-plugin-whitelist@1.0.0",
-        "cordova-plugin-splashscreen@2.1.0"
+        "cordova-plugin-splashscreen@2.1.0",
+        "cordova-plugin-camera@1.2.0",
+        "cordova-plugin-file-transfer@1.3.0"
     ],
     "title-ja": "",
     "title-en": "",
